styles/Coffee.module.css
.main {
  margin-top: 1rem;
  padding-bottom: 5rem;
}

.container {
  max-width: 1400px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-inline: auto;
  padding-inline: 1rem;
}

.gridContainer {
  display: grid;
  grid-template-columns: minmax(100px, 350px) 1fr minmax(100px, 300px);
  gap: 1rem;
  align-items: center;
}

.middle {
  position: relative;
}

.middle img {
  max-width: 100%;
  /* -webkit-filter: drop-shadow(5px 5px 45px rgba(34, 34, 34, 0.418)); */
  /* filter: drop-shadow(5px 5px 45px rgba(34, 34, 34, 0.418)); */
  /* position: relative !important; */
  object-fit: contain;
  width: 100% !important;
  position: relative !important;
  height: unset !important;
}

.left h1 {
  font-size: 4.5rem;
  margin: 0;
  line-height: 1.1;
}

.left p {
  color: #5b5652;
  font-size: 1.1rem;
  margin-top: 1.5rem;
  line-height: 1.6;
  font-weight: 500;
}

.left .price {
  font-size: 2.3rem;
  margin: 0;
  margin-top: 2rem;
}

.right {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.feature {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 3rem;
  transition: all 0.3s ease-in-out;
}

.feature:hover {
  transform: translateY(-5px);
}

.imgFeature {
  position: relative;
  z-index: 5;
}

.feature:nth-child(2) {
  margin-left: 2rem;
}

.imgFeature svg {
  width: 2rem;
  height: 2rem;
}

.imgFeature::before {
  content: "";
  position: absolute;
  width: 4rem;
  height: 4rem;
  background-color: white;
  top: -50%;
  left: -50%;
  z-index: -5;
  border-radius: 50%;
  box-shadow: 0px 0px 28px 20px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
}

.featureText h5 {
  font-size: 1.3rem;
  margin: 0;
}

.button56 {
  align-items: center;
  background-color: #fee6e3;
  border: 2px solid #111;
  border-radius: 8px;
  box-sizing: border-box;
  color: #111;
  cursor: pointer;
  display: flex;
  font-family: Inter, sans-serif;
  font-size: 16px;
  height: 48px;
  justify-content: center;
  line-height: 24px;
  max-width: 100%;
  padding: 0 25px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  font-weight: bold;
  margin-top: 2rem;
}

.button56:after {
  background-color: #111;
  border-radius: 8px;
  content: "";
  display: block;
  height: 48px;
  left: 0;
  width: 100%;
  position: absolute;
  top: -2px;
  transform: translate(8px, 8px);
  transition: transform 0.2s ease-out;
  z-index: -1;
}

.button56:hover:after {
  transform: translate(0, 0);
}

.button56:active {
  background-color: #ffdeda;
  outline: 0;
}

.button56:hover {
  outline: 0;
}

@media (min-width: 768px) {
  .button56 {
    padding: 0 40px;
  }
}

@media screen and (max-width: 1250px) {
  .left h1 {
    font-size: 3rem;
  }
  .left p {
    font-size: 1rem;
  }
  .gridContainer {
    gap: 0;
  }
  .featureText h5 {
    font-size: 1rem;
  }
  .right {
    gap: 1.3rem;
  }
  .feature {
    gap: 1rem;
  }
}

@media screen and (max-width: 950px) {
  .featureText h5 {
    font-size: 1.3rem;
    margin: 0;
  }
  .left h1 {
    font-size: 4.5rem;
  }

  .gridContainer {
    grid-template-columns: 1fr;
  }
  .right {
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem;
    margin: 0 auto;
  }
  .feature {
    flex-direction: column;
    gap: 1rem;
    flex-basis: content;
  }
  .left {
    text-align: center;
  }
  .feature:nth-child(2) {
    margin-left: 0;
    padding-top: 5rem;
  }
  .button56 {
    margin-inline: auto;
    margin-bottom: 1.3rem;
  }
}

@media screen and (max-width: 500px) {
  .featureText h5 {
    font-size: 1rem;
    margin: 0;
  }
  .left h1 {
    font-size: 3rem;
  }
}

